--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="{% static  'css/main.css' %}">
+
     {% block  styles %}
     {% endblock %}
 </head>
@@ -13,5 +14,8 @@
     {% block content %}
     {% endblock %}
 
+
+
+<script>{% block script %} {% endblock %}</script>
 </body>
 </html>
