--- a/templates/homepage/login.html
+++ b/templates/homepage/login.html
@@ -1,5 +1,11 @@
 {% extends 'homepage/base.html' %}
 
+{% load static %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/register.css'%}">
+{% endblock %}
+
 {% block content %}
 
     <h1> Login </h1>
