--- a/templates/homepage/login.html
+++ b/templates/homepage/login.html
@@ -26,7 +26,10 @@
         <br>
         <input type="submit" value="Login">
     </form>
+    <div style="background-image: url({% static '/img/car.jpg' %})">
+    </div>
     <br>
+
     If you have never been to this website before,
     <a href="{% url 'register' %}">click here to register.</a>
 
