--- a/static/css/register.css
+++ b/static/css/register.css
@@ -4,3 +4,10 @@ input[type=text]:focus {
 input[type=password]:focus{
     background-color: lightblue;
 }
+body{
+    text-align: center;
+}
+form{
+    border: 3px solid lightblue;
+    display: inline-block;
+}
